# dagrunner

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  copyright_check  pyproject.toml
.github/workflows/: docs.yml  hugo.yml  main.yml  tests.yml
dagrunner/: __init__.py  config.py  dagrunner.cfg  events.py  execute_graph.py  plugin_framework.py
dagrunner/runner/: __init__.py
dagrunner/runner/schedulers/: __init__.py  asyncmp.py  base.py  dask.py
dagrunner/tests/: __init__.py
dagrunner/tests/config/: test_GlobalConfiguration.py  test__populate_config.py
dagrunner/tests/execute_graph/: test_ExecuteGraph.py  test_get_object_path.py  test_integration.py  test_plugin_executor.py
dagrunner/tests/plugin_framework/: _dummy_applications.py  test_DataPolling.py  test_Input.py  test_LoadJson.py  test_integration.py
dagrunner/tests/results/: dag_graph.html  dag_graph_collapsed_leadtime.html  dag_graph_groupby_diagnostic.html  dag_graph_special_label.html  dagrunner.tests.utils.networkx.test_integration.test_alt_format[md].md  dagrunner.tests.utils.networkx.test_integration.test_basic.html  dagrunner.tests.utils.networkx.test_integration.test_collapse_properties.html  dagrunner.tests.utils.networkx.test_integration.test_groupby.html  dagrunner.tests.utils.networkx.test_integration.test_groupby_recursive.html  dagrunner.tests.utils.networkx.test_integration.test_properties_of_none.html  dagrunner.tests.utils.networkx.test_integration.test_special_characters_words.html  (+1 more)
dagrunner/utils/: __init__.py  _cache.py  _doc_styles.py  logger.py  networkx.py  visualisation.py
docs/: dagrunner.config.md  dagrunner.events.md  dagrunner.execute_graph.md  dagrunner.md  dagrunner.plugin_framework.md  dagrunner.runner.md  dagrunner.runner.schedulers.asyncmp.md  dagrunner.runner.schedulers.base.md  dagrunner.runner.schedulers.dask.md  dagrunner.runner.schedulers.md  dagrunner.utils.logger.md  dagrunner.utils.md  dagrunner.utils.networkx.md  dagrunner.utils.visualisation.md  dagrunner_index.md  demo.ipynb  gen_docs
visual/: mermaid-table-standard.js
(+17 files in other folders)
