[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagrunner"
version = "0.0.1dev"
description = "Directed acyclic graph (DAG) runner and tools"
authors = [
  {name = "Carwyn Pelley", email = "carwyn.pelley@metoffice.gov.uk"},
  {name = "UK Met Office"},
]
maintainers = [
  {name = "Carwyn Pelley", email = "carwyn.pelley@metoffice.gov.uk"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  'networkx >= 3.2',
  'dask[distributed] >= 2024.1.1',
]

[project.optional-dependencies]
tests = [
  "pytest"
]
dev = [
  "pre-commit"
]

[project.urls]
Repository = "https://github.com/MetOffice/dagrunner"

[project.scripts]
dagrunner-execute-graph = "dagrunner.execute_graph:main"
