[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagrunner"
version = "0.0.1dev"
description = "Directed acyclic graph (DAG) runner and tools"
authors = [
  {name = "Carwyn Pelley", email = "carwyn.pelley@metoffice.gov.uk"},
  {name = "UK Met Office"},
]
maintainers = [
  {name = "Carwyn Pelley", email = "carwyn.pelley@metoffice.gov.uk"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  'networkx >= 3.2',
  'dask[distributed] >= 2024.1.1',
  'requests',
]

[project.optional-dependencies]
# for testing the project
tests = [
  "pytest"
]
# for project development
dev = [
  "pytest",
  "pre-commit",
  "pytest-cov"
]
# specifying lower bound versions of packages (testing purposes)
minver=[
  'networkx == 3.2',
  'dask[distributed] == 2024.1.1',
]

[project.urls]
Repository = "https://github.com/MetOffice/dagrunner"

[project.scripts]
dagrunner-execute-graph = "dagrunner.execute_graph:main"
dagrunner-logger = "dagrunner.utils.logger:main"

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true